# ss-assist

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
data/: commissions.json  (+1 more)
tools/icon-cropper/: .gitignore  CLAUDE.md  README.md  annotator.py  build.bat  build.sh  capture.py  config.yaml  config_editor.py  config_template.yaml  create_default_workspaces.py  cropper.py  cropper.spec  csv_loader.py  detector.py  gridcrop.py  pyproject.toml  pytest.ini  test_config_serializer.py  utils.py  version_info.txt  workspace-schema.json
tools/icon-cropper/_deprecated/: README.md  cropper.py
tools/icon-cropper/_docs/: IMPLEMENTATION_PLAN.md  REMAINING_WORK.md  execplan-annotator-integration.md  execplan-dynamic-overlay-parameters.md  execplan-icon-cropper-multipage-workspace.md  execplan-icon-cropper-refactor.md  execplan-unified-overlay-list.md  execplan-workspace-json-unification.md  tool_system_plan.md  workspace-json-schema.md
tools/icon-cropper/editor/: annotation_dialog.py  base_tool.py  canvas_controller.py  config_serializer.py  config_template.py  coordinate_system.py  crop_preview_dialog.py  cropper_api.py  draw_grid_tool.py  draw_ocr_tool.py  grid_editor.py  grid_renderer.py  ocr_editor.py  ocr_resize_controller.py  overlay_model.py  preview_controller.py  preview_window.py  resize_controller.py  select_tool.py  tool_manager.py  ui_builder.py  workspace_manager.py
tools/icon-cropper/editor/schema/: __init__.py
tools/icon-cropper/scripts/: generate_json_schema.py
tools/icon-cropper/tests/: README.md  test_config_serializer.py  test_coordinate_system.py  test_cropper_api.py  test_preview_controller.py  test_workspace_schema.py
(+91 files in other folders)
