[project]
name = "icon-cropper"
version = "0.1.0"
description = "Windows screenshot and icon cropping tool for Stella Sora"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "imagehash>=4.3.2",
    "keyboard>=0.13.5",
    "pillow>=12.0.0",
    "plyer>=2.1.0",
    "pystray>=0.19.5",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]

