[project]
name = "icon-cropper"
version = "0.1.0"
description = "Windows screenshot and icon cropping tool for Stella Sora"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "imagehash>=4.3.2",
    "keyboard>=0.13.5; sys_platform == 'win32'",
    "pillow>=12.0.0",
    "plyer>=2.1.0",
    "pydantic>=2.12.4",
    "pystray>=0.19.5; sys_platform == 'win32'",
    "pywin32>=311; sys_platform == 'win32'",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.18.16",
    "windows-capture>=1.5.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.4",
]

