[project]
name = "icon-cropper"
version = "0.1.0"
description = "Windows screenshot and icon cropping tool for Stella Sora"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pywin32>=311; sys_platform == 'win32'",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.18.16",
    "windows-capture>=1.5.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.4",
]

